syntax = "proto3";
package milvus.proto.model;
option go_package="github.com/milvus-io/milvus/internal/proto/modelpb";

message Collection {
    int64 ID = 1;
    string tenantID = 2;
    string collectionName = 3;
    string description = 4;
    bool autoID = 5;
    uint64 ts = 6;
    string properties = 7;
    uint64 created_time = 8;
    uint64 updated_time = 9;
}
